fix: adjust TypeButton dropdown alignment and update media type labels for clarity

--- a/web-server/plugins/slycat-parameter-image/css/ui.css
+++ b/web-server/plugins/slycat-parameter-image/css/ui.css
@@ -393,7 +393,7 @@
 /* TypeButton dropdown styles */
 .frame-button.type-button.dropup {
   display: inline-block;
-  float: right;
+  float: left;
 }
 .frame-button.type-button .type-button-toggle {
   background: none;
